fix(Background): 调整 title letter-spacing

--- a/src/components/Background/index.less
+++ b/src/components/Background/index.less
@@ -17,10 +17,10 @@
     text-align: center;
     color: #fff;
     padding: 150px 0;
+    letter-spacing: 3px;
 
     .title {
       font-size: 70px;
-      // font-family: "melon";
       font-weight: 800;
       margin-bottom: 20px;
     }
